# SK_EFT_Hawking

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  README.md  SK_EFT_Hawking_Inventory.md  SK_EFT_Hawking_Inventory_Index.md  example.env  pyproject.toml
.claude-plugin/: marketplace.json
docker/: docker-compose.graph.yml
docs/: AI-DEFECT-DEFENSE-LAYER.md  ARCHITECTURE_SCOPE.md  ARXIV_DEPOSIT_PLAN.md  ATLAS_HEATMAP.md  BUNDLE_DIRECTORY_SCHEMA.md  BUNDLE_LIFT_PROCEDURE.md  BUNDLE_READINESS_HEATMAP.md  DASHBOARD.md  DISCLOSURE_TEXT.md  Fluid-Based Approach to Fundamental Physics  Feasibility Study.md  Fluid-Based Approach to Fundamental Physics- Consolidated Critical Review v3.md  KNOWLEDGE_GRAPH.md  LATE_PHASE6_ABSORPTION_PROTOCOL.md  PAPER_DRAFT_MAPPING.md  PAPER_STRATEGY.md  PAPER_TABLES_STATUS.md  PERMANENT_TRACKED_HYPOTHESES.md  PHASE5_STEP13_COMPLETE.md  PHASE6T_QUANTITATIVE_SK_COMPLETE.md  Phase2_Strategic_Positioning.md  Phase2_companion_guide.md  Phase2_paper_draft.tex  QI_REGISTER.md  READINESS_GATES.md  RESEARCH_STATUS_OVERVIEW.md  SIXTEEN_CONVERGENCE_STATUS.md  SK_EFT_Hawking_Paper.ipynb  SK_EFT_Hawking_Paper_Roadmap.md  SK_EFT_Hawking_Stakeholder_Implications.md  Strategic_Positioning_SK_EFT_in_Broader_Program.md  Uqsl2AffineHopf.lean.bak  Uqsl2AffineHopf_2sorry.lean  Uqsl2AffineHopf_broken_replay.lean  Uqsl2AffineHopf_deduped.lean  Uqsl2AffineHopf_recovered.lean  WAVE_EXECUTION_PIPELINE.md  chirality_wall_analysis.md  citation_verifications.jsonl  companion_guide.md  counts.json  (+17 more)
figures/: fig10_positivity_constraint.html  fig11_on_shell_vanishing.html  fig12_einstein_relation.html  fig13_parity_alternation.html  fig14_parity_alternation_stakeholder.html  fig15_damping_rate_third_order.html  fig16_spectral_correction_comparison.html  fig17_kappa_crossing.html  fig18_spin_sonic_phase3.html  fig19_bogoliubov_connection.html  fig1_transonic_profiles.html  fig20_sm_scorecard.html  fig21_erasure_survey.html  fig22_complex_turning_point.html  fig23_effective_surface_gravity.html  fig24_decoherence_and_noise.html  fig25_hawking_spectrum_exact.html  fig26_hawking_spectrum_stakeholder.html  fig27_exact_vs_perturbative.html  fig28_adw_effective_potential.html  fig29_adw_phase_diagram.html  fig2_correction_hierarchy.html  fig30_adw_ng_modes.html  fig31_adw_he3_analogy.html  fig32_adw_obstacles.html  fig33_adw_coupling_scan.html  fig34_adw_coupling_scan_stakeholder.html  fig35_prediction_table_comparison.html  fig36_detector_requirements.html  fig37_kappa_scaling.html  fig38_noise_floor_crossover.html  fig39_chirality_wall_status.html  fig3_parameter_space.html  fig40_gl_phase_diagram.html  fig41_he3_comparison_table.html  fig42_vestigial_phase_diagram.html  fig43_backreaction_cooling.html  fig44_information_retention.html  fig4_spin_sonic_enhancement.html  fig5_temperature_decomposition.html  (+14 more)
lean/: .gitignore  SKEFTHawking.lean  atlas_view.json  lake-manifest.json  lakefile.toml  lean_deps.json  lean_deps.json.hash
logs/: vestigial_mc_2core_production_20260413.out  vestigial_mc_adw_rerun.out  vestigial_mc_incremental_20260330T135549.out  vestigial_mc_njl_diagnostic.out  vestigial_mc_njl_full_production.out  vestigial_mc_weingarten_20260331T114048.out
notebooks/: ADW_Stakeholder.ipynb  ADW_Technical.ipynb  ExperimentalPredictions_Stakeholder.ipynb  ExperimentalPredictions_Technical.ipynb  GaugeErasure_Stakeholder.ipynb  GaugeErasure_Technical.ipynb  Phase1_Stakeholder.ipynb  Phase1_Technical.ipynb  Phase2_Stakeholder.ipynb  Phase2_Technical.ipynb  Phase3_Stakeholder.ipynb  Phase3_Technical.ipynb  Phase3a_ThirdOrder_Stakeholder.ipynb  Phase3a_ThirdOrder_Technical.ipynb  Phase3b_GaugeErasure_Stakeholder.ipynb  Phase3b_GaugeErasure_Technical.ipynb  Phase3c_WKBConnection_Stakeholder.ipynb  Phase3c_WKBConnection_Technical.ipynb  Phase3d_ADW_Stakeholder.ipynb  Phase3d_ADW_Technical.ipynb  Phase4a_ExperimentalPredictions_Stakeholder.ipynb  Phase4a_ExperimentalPredictions_Technical.ipynb  Phase4b_Vestigial_Stakeholder.ipynb  Phase4b_Vestigial_Technical.ipynb  Phase5a_ChiralityWall_Stakeholder.ipynb  Phase5a_ChiralityWall_Technical.ipynb  Phase5a_GTChiralFermion_Stakeholder.ipynb  Phase5a_GTChiralFermion_Technical.ipynb  Phase5b_ModularGeneration_Stakeholder.ipynb  Phase5b_ModularGeneration_Technical.ipynb  Phase5b_QuantumGroup_Stakeholder.ipynb  Phase5b_QuantumGroup_Technical.ipynb  Phase5b_SMAnomalyDrinfeld_Stakeholder.ipynb  Phase5b_SMAnomalyDrinfeld_Technical.ipynb  Phase5b_Synthesis_Stakeholder.ipynb  Phase5b_Synthesis_Technical.ipynb  Phase5c_E8Rokhlin_Stakeholder.ipynb  Phase5c_E8Rokhlin_Technical.ipynb  Phase5c_HopfAlgebra_Stakeholder.ipynb  Phase5c_HopfAlgebra_Technical.ipynb  (+61 more)
papers/: claim_clusters.json  claims_review_session_5qrs.json  cluster_bundle_index.json
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: analyze_majorana_results.py  aristotle_usage_by_bundle.py  atlas_heatmap.py  atlas_view.py  audit_paper_lean_refs.py  back_fill_primary_sources.py  benchmark_rust_parallel.py  bridge_superset_validation.py  build_graph.py  bundle_append.py  bundle_clusters.py  bundle_migration.py  bundle_readiness.py  bundle_source_manifest.py  chain_canonicalize.py  check_bundle_source_freshness.py  citation_cache.py  clifford_base_validation.py  cluster_detect.py  convert_inprep_citations.py  count_theorem_reuse.py  datastar_bundles.py  datastar_helpers.py  emit_clifford_table.py  extract_lean_deps.py  extract_missing_bibkeys.py  extract_sigma_symbolic.py  gate_precheck.py  generate_a1_resolution.py  graph_integrity.py  grid_compile_pygridsynth_xval.py  grid_enum_pygridsynth_xval.py  grid_stub_validation.py  harness_lock.py  kmm_ma_coverage_validation.py  kmm_ma_step_residue.py  kmm_n3_bfs.py  kmm_zomega_reference_oracle.py  last_modified.py  lint_native_decide_comments.py  (+44 more)
src/: __init__.py  aristotle_interface.py  transonic_background.py  visualizations.py
tests/: test_a1_ext.py  test_adm_formalism.py  test_adw.py  test_adw_cosmological_constant.py  test_affine_quantum.py  test_apm_ldpc_hashing_bound.py  test_aristotle_submit.py  test_atlas_view.py  test_bbn.py  (+115 more)
(+4587 files in other folders)
