[project]
name = "sk-eft-hawking"
version = "0.2.0"
description = "Dissipative EFT Corrections to Analog Hawking Radiation: Computation and Formalization"
authors = [
    { name = "John Roehm" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core scientific
    "numpy>=2.0",
    "scipy>=1.14",
    # Aristotle theorem prover
    "aristotlelib>=1.0.0",
    # Symbolic math (Phase 2 WKB expansion)
    "sympy>=1.12",
    "mpmath>=1.3",
    # Visualization
    "plotly>=6.0",
    "kaleido>=1.0",
    # Notebooks
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "nbformat>=5.10",
    # Testing
    "pytest>=9.0.3",
    # Rust RHMC extension (built automatically via maturin from rust/)
    "sk-eft-rhmc",
    "pandas>=3.0.1",
    # Provenance dashboard
    "flask>=3.0",
    # Provenance knowledge graph (database connectivity)
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# Fermion-bag MC (Wave 7B) — numba JIT for inner loops.
# Required for: gauge_fermion_bag.py, gauge_fermion_bag_majorana.py
# Used for: L=4 reference cross-validation of RHMC
fermion-bag = ["numba>=0.65.0"]

# JAX CPU backend (Wave 7C) — JIT CG solver, vmap multi-shift.
# Required for: hs_rhmc_jax.py
# Superseded by PyTorch MPS for production (faster on Apple Silicon)
jax-cpu = ["jax>=0.9.2"]

# PyTorch MPS GPU backend (Wave 7C production) — ~100× speedup on Apple Silicon.
# Required for: hs_rhmc_torch.py (to be implemented)
gpu = ["torch>=2.11"]

# Rust backend build tool — now in main dependencies.
# Usage: PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 uv run maturin develop --release --manifest-path rust/Cargo.toml
rust = []

# All MC backends (development/testing)
mc-all = ["numba>=0.65.0", "jax>=0.9.2", "torch>=2.11"]

# Provenance knowledge graph (Phase 1)
graph = [
    "datastar-py>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
sk-eft-rhmc = { path = "rust/", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
