[project]
name = "sk-eft-hawking"
version = "0.2.0"
description = "Dissipative EFT Corrections to Analog Hawking Radiation: Computation and Formalization"
authors = [
    { name = "John Roehm" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core scientific
    "numpy>=2.0",
    "scipy>=1.14",
    # Aristotle theorem prover
    "aristotlelib>=1.0.0",
    # Symbolic math (Phase 2 WKB expansion)
    "sympy>=1.12",
    "mpmath>=1.3",
    # Visualization
    "plotly>=6.0",
    "kaleido>=1.0",
    # Notebooks — explicit minimum set (we don't ship a UI; users open .ipynb
    # with their own frontend). Avoids pulling jupyterlab/notebook/jupyter-console
    # via the `jupyter` umbrella, and pins nbconvert past CVE-2026-39377/39378.
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "nbformat>=5.10",
    "nbclient>=0.10",       # validate.py CHECK 11 notebook execution
    "nbconvert>=7.17.1",    # scripts/pre-commit-notebooks.sh CLI; CVE-patched
    # Testing
    "pytest>=9.0.3",
    # Rust RHMC extension (built automatically via maturin from rust/)
    "sk-eft-rhmc",
    "pandas>=3.0.1",
    # Provenance dashboard
    "flask>=3.0",
    # Datastar SDK — dashboard reactive layer (replaces HTMX/vanilla-JS).
    # Reference: docs/references/Datastar_Dashboard_Reference.md
    "datastar-py>=0.5",
    # Provenance knowledge graph (database connectivity)
    "psycopg[binary]>=3.2",
    # HTTP client (citation primary-source fetcher; arXiv + Crossref + ADS)
    "httpx>=0.28",
    # Transitive floor for security: closes CVE-2026-4539 (ReDoS in AdlLexer).
    # Pulled by ipython / nbconvert / jupyterlab-pygments unconstrained;
    # pin here to force >=2.20.0 across the dep graph.
    "pygments>=2.20",
    "pdfminer-six>=20260107",
    "pygridsynth>=2.0.0",
]

[project.optional-dependencies]
# Fermion-bag MC (Wave 7B) — numba JIT for inner loops.
# Required for: gauge_fermion_bag.py, gauge_fermion_bag_majorana.py
# Used for: L=4 reference cross-validation of RHMC
fermion-bag = ["numba>=0.65.0"]

# JAX CPU backend (Wave 7C) — JIT CG solver, vmap multi-shift.
# Required for: hs_rhmc_jax.py
# Superseded by PyTorch MPS for production (faster on Apple Silicon)
jax-cpu = ["jax>=0.9.2"]

# PyTorch MPS GPU backend (Wave 7C production) — ~100× speedup on Apple Silicon.
# Required for: hs_rhmc_torch.py (to be implemented)
gpu = ["torch>=2.11"]

# Rust backend build tool — now in main dependencies.
# Usage: PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 uv run maturin develop --release --manifest-path rust/Cargo.toml
rust = []

# All MC backends (development/testing)
mc-all = ["numba>=0.65.0", "jax>=0.9.2", "torch>=2.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
sk-eft-rhmc = { path = "rust/", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Default behaviour: skip tests marked `slow` (Lean ExtractDeps re-runs,
# graph rebuilds, anything that shells out to lake / pdflatex / aristotle).
# Run them explicitly with `-m slow` or `-m ""` to include everything.
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that trigger Lean re-extraction, graph rebuilds, or external subprocess calls (run with `-m slow` or `-m ''` to include)",
]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
